hphp/test/zend/good/Zend/tests/not_002.php.expectf

Fatal error: Unsupported operand type for ~ in %s/not_002.php on line 6
